screen.css
body {
    margin: 0;
    background: #F2F2F2;
    /* font-family: fansong; */
    font-size: 60px;
    color: #333333;
    letter-spacing: 3px;
}

a {
    color: inherit;
    text-decoration: none;
}

a:visited {
    color: inherit;
    text-decoration: none;
}

/* Home Page */
.header {
    display: flex;
    height: 100px;
    align-items: center;
    justify-content: center;
    box-shadow: 0 10px 8px -9px rgb(203, 203, 203);
}

.header img {
    max-height: 100px;
    margin: 0 10px 10px 10px;
}

.header-text {
    font-family: cursive;
}

.welcome {
    text-align: center;
    margin: 20px;
}



/* @media only screen and (min-width: 992px) {
    .main-dishes {
        display: flex;
        align-items: center;
        justify-content: space-evenly;
        margin-top: 20px;
    }
} */

/* TODO LOOK AT THIS FOR SCREEN SIZE ADJUSTING */
/* @media screen and (max-width: 992px) {
    html, body {
        overflow-x: hidden;
      }
    body {
        margin: 0;
    }
    .main-dishes {
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }
  } */

.main-dishes {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 1em;
    margin: 20px 50px 30px 50px;
    /* height: 600px; */
    /* overflow-y: hidden; */
}

.main-dishes a img {
    height: 500px;
    max-width: 333px;
    width: auto;
    border-radius: 5px;
}

.main-dishes a p {
    margin: -10px 0 0 0;
    font-size: 30px;
    text-align: center;
    letter-spacing: 3px;
}

.meals {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 1em;
    margin: 20px 50px 60px 50px;
}

.meal {
    text-align: center;
    background: #B6CEB2;
    border: 2px solid #6d8269;
    height: 100px;
    width: 250px;
    min-width: 195px;
    font-size: 40px;
    border-radius: 20px;
}

.meal p {
    margin: 27px 0;
    color: #333333;
}

.about-me {
    display: flex;
    justify-content: center;
    gap: 1.5em;
    margin: 40px 50px 0 50px;
}

.about-me-img {
    width: auto;
    height: 500px;
    border-radius: 5px;
}

.about-me-desc {
    font-size: 30px;
    max-width: 500px;
}

.footer {
    background: #B6CEB2;
    border-top: 3px solid #6d8269;
    margin: 55px 0 0 0;
    padding: 40px 0 40px 0;
    display: flex;
    justify-content: center;
    gap: 1em;
}

.footer p {
    margin: 0;
    font-size: 30px;
}
/* Home Page */

/* Meals Page */
.meal-header {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100px;
    margin-top: 20px;
}

.meal-header img {
    max-height: 100px;
    margin: 0 10px;
}

.row {
    display: flex;
    justify-content: center;
    gap: 1em;
    margin: 20px 0;
}

.row a p {
    margin: -10px 0 0 0;
    font-size: 30px;
    text-align: center;
}

.recipe-card {
    height: 500px;
    width: 333px;
    object-fit: cover;
    background: red;
    border-radius: 5px;
}
/* Meals Page */


/* Recipe Page */
.recipe-about {
    display: flex;
    justify-content: center;
    margin: 0 150px 0 200px;
}

.recipe-text {
    margin-left: 30px;
    max-height: 610px;
    width: auto;
}

.recipe-title {
    font-size: 70px;
    margin: 60px 0 0 0;
}

.recipe-desc {
    font-size: 35px;
    line-height: 1.5;
    /* max-width: 800px; */
}

.recipe-img {
    height: 550px;
    margin: 60px 0 0 0;
    border-radius: 5px;
}

.prep p {
    /* background: #B6CEB2; */
    /* border: 2px solid #6d8269; */
    border-radius: 20px;
    text-align: center;
    gap: 1em;
    font-size: 30px;
}

.instructions-title {
    text-align: center;
    margin: 30px 0 0 0;
}

.instructions {
    display: flex;
    justify-content: center;
    margin-top: 30px;
}

.instructions-text {
    display: flex;
    justify-content: space-evenly;
    gap: 2em;
    font-size: 40px;
}

.directions {
    max-width: 850px;
    text-align: left;
}

.directions-list {
    font-size: 30px;
}

.instructions-h2 {
    margin: 0;
    font-size: 50px;
}

.ingredients-list {
    font-size: 30px;
}

.personal-pics-header {
    text-align: center;
    margin: 30px 0 20px 0;
}

.personal-pics {
    display: flex;
    justify-content: center;
}

.personal-pics img{
    border-radius: 10px;
}

.more {
    text-align: center;
    font-size: 30px;
    text-decoration: underline;
}

/* Recipe Page */

